# Codentis

./: .gitignore  ARCHITECTURE.md  BUILD_INSTALLERS.md  CHANGELOG.md  CODENTIS.md  Codentis-32bit.spec  Codentis.spec  GITHUB_ACTIONS_SETUP.md  INSTALL.md  MANIFEST.in  MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_GUIDE.md  RELEASE_PROCESS.md  USER_INSTALL_GUIDE.md  check_config.py  codebase_graph.md  e version 1.2.4  main.py  pyproject.toml  requirements.txt  setup.py  simple_check.py  test_stream.py
.agent/: codentis.toml
.github/workflows/: build-test.yml  release.yml
agent/: agent.py  events.py  session.py
client/: llm_client.py  response.py
codentis/: __init__.py  app.py  cli.py
codentis/agent/: agent.py  events.py  session.py
codentis/client/: llm_client.py
codentis/config/: __init__.py  config.py  config_manager.py  loader.py  setup_wizard.py
codentis/context/: contextManager.py
codentis/prompts/: system.py
codentis/tools/: __init__.py  base.py  registry.py  subagents.py
codentis/ui/: renderer.py
config/: config.py  loader.py
context/: contextManager.py
prompts/: system.py
samsung/: index.html  script.js  styles.css
scripts/: build_exe.py  build_linux.sh  build_linux_deb.sh  build_linux_rpm.sh  build_macos.sh  build_macos_installer.sh  build_windows_installer.py  installer_windows.iss  release_version.py  update_all_versions.py  update_pyproject_version.py
tools/: __init__.py  base.py  registry.py
ui/: renderer.py
utils/: errors.py  paths.py  text.py
website/: package-lock.json  package.json
website/app/: page.tsx  (+2 more)
(+45 files in other folders)
