[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codentis"
version = "1.2.2"
description = "An intelligent CLI AI agent for developers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Codentis Team"}
]
keywords = ["ai", "cli", "agent", "llm", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai",
    "python-dotenv",
    "requests",
    "click",
    "rich",
    "tiktoken",
    "pydantic",
    "tomli",
    "platformdirs",
    "ddgs",
    "httpx",
    "beautifulsoup4",
    "textual",
    "typer",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
codentis = "codentis.cli:run"

[project.urls]
Homepage = "https://github.com/sujal-GITHUB/Codentis"
Repository = "https://github.com/sujal-GITHUB/Codentis"
Issues = "https://github.com/sujal-GITHUB/Codentis/issues"

[tool.setuptools]
packages = ["codentis"]

[tool.setuptools.package-data]
codentis = ["*.md"]
